--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
 body {
   background-color: bisque;
 }
+
+
+.img-container {
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+}
